# kn

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  rustfmt.toml
.github/workflows/: build-and-tests.yml  build-binaries.yml  tests.yml
init/: kn.bash  kn.bash.template  kn.fish  kn.fish.template  kn.powershell.template  kn.zsh  kn.zsh.template  se.fish
src/: abbr.rs  app.rs  args.rs  error.rs  init.rs  interactive.rs  main.rs  node.rs  query.rs  utils.rs
src/init/: mod.rs
src/interactive/: mod.rs  search.rs  ui.rs
src/query/: abbr.rs  entry.rs  mod.rs  search_engine.rs  sequence.rs  slice.rs
src/search/: abbr.rs  fs.rs  mod.rs
