[package]
name = "kn"
version = "0.2.2"
edition = "2018"
autobins = false
include = [
    "**/*.rs",
    "init",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE.txt",
    "CHANGELOG.md",
    "rustfmt.toml",
]

authors = ["micouy <m.powierza@tutanota.com>"]
description = "`cd` alternative. Navigate by typing abbreviation of paths."
repository = "https://github.com/micouy/kn"
readme = "README.md"
license = "MIT"

categories = ["command-line-utilities", "filesystem"]
keywords = ["cli", "utility", "filesystem"]

[[bin]]
name = "_kn"
path = "src/main.rs"


[dependencies]
pico-args = "0.4"
thiserror = "1.0"
strsim = "0.10"
termion = "1.5"
unicode-width = "0.1"
alphanumeric-sort = "1.4"


[dev-dependencies]
pretty_assertions = "0.7"


[profile.release]
lto = true
