[package]
name = "kn"
version = "0.2.2"
edition = "2018"
autobins = false
include = [
    "**/*.rs",
    "init",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE.txt",
    "CHANGELOG.md",
    "rustfmt.toml",
]

authors = ["micouy <m.powierza@tutanota.com>"]
description = "`cd` alternative. Navigate by typing abbreviation of paths."
repository = "https://github.com/micouy/kn"
readme = "README.md"
license = "MIT"

categories = ["command-line-utilities", "filesystem"]
keywords = ["cli", "utility", "filesystem"]

[[bin]]
name = "_kn"
path = "src/main.rs"

[dependencies]
alphanumeric-sort = "1.4"
thiserror = "1.0"
powierza-distance = { git = "https://github.com/micouy/powierza-distance", rev = "b6eda77" }

[dev-dependencies]
pretty_assertions = "0.7"

[profile.release]
lto = true
