[package]
name = "kn"
version = "0.3.1"
edition = "2018"
autobins = false
include = [
    "**/*.rs",
    "init",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE.txt",
    "CHANGELOG.md",
    "rustfmt.toml",
]

authors = ["micouy <m.powierza@tutanota.com>"]
description = "`cd` alternative. Navigate by typing abbreviation of paths."
repository = "https://github.com/micouy/kn"
readme = "README.md"
license = "MIT"

categories = ["command-line-utilities", "filesystem"]
keywords = ["cli", "utility", "filesystem"]

[[bin]]
name = "_kn"
path = "src/main.rs"

[[bin]]
name = "debug"
path = "src/debug.rs"

[dependencies]
alphanumeric-sort = "1.4"
thiserror = "1.0"
pico-args = { version = "0.4", features = [] }
powierza-coefficient = "1.0.1"
serde_derive = "1.0"
serde = "1.0"
toml = "0.5"
dirs = "4.0"

[dev-dependencies]
pretty_assertions = "0.7"

[profile.release]
lto = true
